# keiba-oracle

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.dev-notes/: 2026-01-08.md  2026-01-09.md  2026-01-11.md
.github/: dependabot.yml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
.issues/: 001-copilotkit-dict-repr-bug.md  002-copilotkit-default-agent.md
.plans/: 002-copilotkit-vercel-fix.md  implementation-plan.md
agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
agent/app/: __init__.py  graph.py  main.py
agent/app/models/: __init__.py  state.py
agent/app/nodes/: __init__.py  auditor.py  scout.py  strategist.py
agent/app/skills/: __init__.py  kelly_criterion.skill
agent/app/tools/: __init__.py  search.py
agent/tests/: __init__.py  conftest.py  test_auditor.py  test_models.py  test_scout.py  test_strategist.py
web/: .env.local.example  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
web/app/: layout.tsx
web/app/api/copilotkit/: route.ts
web/components/: Dashboard.tsx  NodeGraph.tsx  ReasoningTrace.tsx  ToolPulse.tsx
web/hooks/: useKeibaOracle.ts
web/hooks/__tests__/: useKeibaOracle.test.ts
web/lib/: types.ts
web/tests/: setup.ts
web/tests/mocks/: copilotkit.ts
