[project]
name = "keiba-oracle-agent"
version = "0.2.0"
description = "Keiba Oracle - Japanese Horse Racing AI Agent with Explicit Reasoning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LangGraph & LangChain Core
    "langgraph>=1.1.9",
    "langchain-core>=1.2.30",

    # Google Generative AI SDK (Gemini 3)
    "google-genai>=1.73.1",

    # Tavily Search
    "langchain-tavily>=0.2.18",
    "tavily-python>=0.7.23",

    # FastAPI & Web
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",

    # AG-UI Protocol for CopilotKit
    "copilotkit>=0.1.87",

    # Pydantic for State Models
    "pydantic>=2.13.3",

    # Environment & Utilities
    "python-dotenv>=1.2.2",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = [".venv/lib/python3.12/site-packages"]